# anime-violence

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  script.py
